--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Here is a collection of my code. Each file is a new piece of some of my best python programs. Updated regularly. Enjoy!
+NOTE: I made these using TechSmart so some may not work in other python programs
